--- a/Dashbouard-master/Dashbouard-master/src/app/login/login.component.html
+++ b/Dashbouard-master/Dashbouard-master/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <!--Login.html-->
 <div class="container-fluid">
+    <p-messages  [enableService]="true"></p-messages>
+
     <div class="row contenair">
         <div class="col-lg-1 col-xlg-3 col-md-12"></div>
         <div class="row col-lg-10 col-xlg-9 col-md-12 content">
