--- a/Dashbouard-master/Dashbouard-master/src/app/menu/menu.component.html
+++ b/Dashbouard-master/Dashbouard-master/src/app/menu/menu.component.html
@@ -46,6 +46,13 @@
                                 <span class="hide-menu"><b>Gestion des Categories</b></span>
                             </a>
                         </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="listLocalite" aria-expanded="false">
+                                <i class="fas fa-chart-line" aria-hidden="true" style="color: #2D6000;"></i>
+                                <span class="hide-menu"><b>Gestion des Localités</b></span>
+                            </a>
+                        </li>
                         
                       
                         <li class="sidebar-item" style="padding-top: 30px;">
